supply-chain: dependency scanning and pgJDBC URL hardening
The dependency scan gets its NVD wiring and SBOM contract; a long
barrage of pgJDBC URL-parameter hardening blocks plugin hooks, XML
factories, transport and auth downgrades, and target overrides;
advisory-affected dependencies are upgraded; tenant context clear
fails closed during transactions.